--- a/Softuni/WordReportGenerator/WordReportGeneratorUI/MainWindow.xaml
+++ b/Softuni/WordReportGenerator/WordReportGeneratorUI/MainWindow.xaml
@@ -1,8 +1,21 @@
 ﻿<Window x:Class="WordReportGeneratorUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="400" Width="800">
     <Grid>
-
+        <DockPanel VerticalAlignment="Top">
+            <StackPanel Name="topStack" Orientation="Horizontal" DockPanel.Dock="Top" HorizontalAlignment="Stretch" >
+                <Button MinWidth="198" Content="Import data" Click="ImportCompanyData"></Button>
+                <Button MinWidth="198" Content="Export to Word" Click="ExportCheckedReportsAsWord"></Button>
+                <Button MinWidth="198" Content="Export to Dropbox"></Button>
+                <Button MinWidth="198" Content="About"></Button>
+            </StackPanel>
+            <StackPanel Name="leftStack" DockPanel.Dock="Left" Orientation="Horizontal" HorizontalAlignment="Left">
+                <TreeView Name="employeesTreeView"></TreeView>
+            </StackPanel>
+            <StackPanel Name="rightStack" DockPanel.Dock="Right" Orientation="Horizontal"   HorizontalAlignment="Stretch">
+                <TextBlock Name="previewReportArea"></TextBlock>
+            </StackPanel>
+        </DockPanel>
     </Grid>
 </Window>
